--- a/css/style.css
+++ b/css/style.css
@@ -50,20 +50,29 @@ header{background:#0073ae}
 }
 @media(max-width:600px){
 .bg_banner{background:url(../images/bg_banner_img_mob.webp) left bottom no-repeat}
-.banner_content h1{padding-top:20px;font-size:42px;font-weight:700;text-transform:uppercase;color:#0073ae;margin-bottom:0}
-.banner_content h2{color:#212121;font-weight:500;font-size:28px;line-height:normal;margin-bottom:0}
-.banner_content p{font-size:16px;color:#212121;font-weight:300;margin-bottom:0}
+.banner_content h1{padding-top:20px;font-size: 36px;font-weight:700;text-transform:uppercase;color:#0073ae;margin-bottom:0}
+.banner_content h2{color:#212121;font-weight:500;font-size: 23px;line-height:normal;margin-bottom:0}
+.banner_content p{font-size: 15px;color:#212121;font-weight:300;margin-bottom:0}
 .img_banner_div{padding:0}
-.img_banner_div img{margin-top:-20px}
+.img_banner_div img{margin-top: -75px;}
+}
+@media(max-width:500px){
+.bg_banner{background:url(../images/bg_banner_img_mob.webp) left bottom no-repeat}
+.banner_content h1{padding-top:20px;font-size: 39px;font-weight:700;text-transform:uppercase;color:#0073ae;margin-bottom:0}
+.banner_content h2{color:#212121;font-weight:500;font-size: 25px;line-height:normal;margin-bottom:0}
+.banner_content p{font-size: 16px;color:#212121;font-weight:300;margin-bottom:0}
+.img_banner_div{padding:0}
+.img_banner_div img{margin-top: -75px;}
 }
 @media(max-width:400px){
 .bg_banner{background:url(../images/bg_banner_img_mob.webp) left bottom no-repeat}
-.banner_content h1{padding-top:20px;font-size:35px;font-weight:700;text-transform:uppercase;color:#0073ae;margin-bottom:0}
-.banner_content h2{color:#212121;font-weight:500;font-size:24px;line-height:normal;margin-bottom:0}
-.banner_content p{font-size:16px;color:#212121;font-weight:300;margin-bottom:0}
+.banner_content h1{padding-top:20px;font-size: 32px;font-weight:700;text-transform:uppercase;color:#0073ae;margin-bottom:0}
+.banner_content h2{color:#212121;font-weight:500;font-size: 21px;line-height:normal;margin-bottom:0}
+.banner_content p{font-size: 14px;color:#212121;font-weight:300;margin-bottom:0}
 .img_banner_div{padding:0}
-.img_banner_div img{margin-top:-20px}
+.img_banner_div img{margin-top: -75px;}
 }
+
 
 /*==========================================*/
 /* Form Form css*/
